Add and finish Tugas CRUD Hooks

--- a/Tugas-React/project-reactjs/src/App.css
+++ b/Tugas-React/project-reactjs/src/App.css
@@ -41,15 +41,8 @@
   color: #888;
 } */
 
-body {
-  font-family:Arial, Helvetica, sans-serif;
-  display: flex;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-}
 
-.container {
+/* .container {
   width: 400px;
   text-align: center;
   margin-top: 40px;
@@ -66,7 +59,7 @@ body {
   font-size: 36px;
   color: black;
   font-weight: bolder;
-}
+  }
 
 .container-hooks p {
   text-align: left;
@@ -77,46 +70,46 @@ body {
 .logo {
   width: 80%;
   height: auto;
-}
+  }
 
-h1 {
+  h1 {
   text-align: left;
   font-weight: lighter;
   font-size: 32px;
   color: #888;
   margin-bottom: 5px;
-}
-
-p {
-  margin-top: 0;
-  text-align: left;
-  font-size: 14px;
-}
-
-.container hr {
-  width: 100%;
-}
-
-.checkbox-list {
-  display: block;
-  text-align: left;
-}
-
-.checkbox-item {
-  font-size: 16px;
-  display: block;
-  margin: 20px 0 20px 0;
-  width: 100%;
-}
-
-.checkbox-input {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
-  vertical-align: middle;
-  cursor: pointer;
-}
+  }
+  
+  p {
+    margin-top: 0;
+    text-align: left;
+    font-size: 14px;
+    }
+    
+    .container hr {
+      width: 100%;
+      }
+      
+      .checkbox-list {
+        display: block;
+        text-align: left;
+        }
+        
+        .checkbox-item {
+          font-size: 16px;
+          display: block;
+          margin: 20px 0 20px 0;
+          width: 100%;
+          }
+          
+          .checkbox-input {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+            vertical-align: middle;
+            cursor: pointer;
+            }
 
 .checkbox-item input {
   margin-right: 10px;
@@ -130,4 +123,113 @@ p {
   padding: 15px 20px;
   cursor: pointer;
   font-size: 16px;
-}
+  } */
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+  }
+  
+  .container-crud {
+    width: 700px;
+    text-align: center;
+    margin-top: 40px;
+  }
+  
+  .container-crud h1 {
+    text-align: center;
+    font-size: 28px;
+    color: black;
+    font-weight: bolder;
+  }
+  
+  .container-form {
+    width: 100%;
+    text-align: center;
+    margin-top: 55px;
+    display: block;
+    border: 1px solid #000;
+  }
+  
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+  }
+  
+  th, td {
+    border: 1px solid #000000;
+    padding: 8px;
+  }
+  
+  th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #91DDCF;
+  }
+  
+  form {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+  }
+  
+  .form-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 10px;
+  }
+  
+  label {
+    text-align: left;
+    font-weight: bold;
+    flex: 1;
+  }
+  
+  input {
+    text-align: left;
+    padding: 5px 10px 5px 10px;
+    margin: 5px 0px;
+    flex: 2;
+  }
+  
+  button {
+    padding: 7px;
+    background-color: #4caf50;
+    margin-right: 5px;
+    border-radius: 5px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+  }
+  
+  .btn-delete {
+    background-color: #973131;
+  }
+  
+  .btn-submit {
+    color: #000;
+    background-color: #91DDCF;
+    width: 100px;
+    align-self: flex-end;
+    margin: 20px;
+  }
+  
+  .btn-submit:hover {
+    background-color: #fff;
+    border-color: black;
+    border-style:inset;
+  }
+  
+  button:hover {
+    background-color: #45a049;
+  }
+  
+  .btn-delete:hover {
+    background-color: darkred;
+  }
+  
