--- a/Tugas-React/project-reactjs/src/App.css
+++ b/Tugas-React/project-reactjs/src/App.css
@@ -133,9 +133,8 @@
   }
   
   .container-crud {
-    width: 700px;
     text-align: center;
-    margin-top: 40px;
+    margin: 50px;
   }
   
   .container-crud h1 {
@@ -151,6 +150,7 @@
     margin-top: 55px;
     display: block;
     border: 1px solid #000;
+    padding-bottom: 20px;
   }
   
   table {
@@ -182,6 +182,7 @@
     justify-content: space-between;
     align-items: center;
     margin: 10px 10px;
+    margin-bottom: 10px;
   }
   
   label {
