Add react router and adjust previous assignments

--- a/Tugas-React/project-reactjs/src/TugasCRUDHooks/TugasCRUDHooks.css
+++ b/Tugas-React/project-reactjs/src/TugasCRUDHooks/TugasCRUDHooks.css
@@ -9,7 +9,7 @@ body {
   .container-crud {
     width: 700px;
     text-align: center;
-    margin-top: 40px;
+    margin-top: 100px;
   }
   
   .container-crud h1 {
@@ -27,18 +27,18 @@ body {
     border: 1px solid #000;
   }
   
-  table {
+  .table-crud {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
   }
   
-  th, td {
+  .table-crud th, td {
     border: 1px solid #000000;
     padding: 8px;
   }
   
-  th {
+  .table-crud th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
@@ -71,7 +71,7 @@ body {
     flex: 2;
   }
   
-  button {
+  .btn-edit {
     padding: 7px;
     background-color: #4caf50;
     margin-right: 5px;
@@ -99,7 +99,7 @@ body {
     border-style:inset;
   }
   
-  button:hover {
+  .btn-edit:hover {
     background-color: #45a049;
   }
   
