--- a/Tugas-React/fp-super-bootcamp-react/src/index.css
+++ b/Tugas-React/fp-super-bootcamp-react/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,25 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+[data-theme='light'] {
+  --bg-color: #ffffff;
+  --text-color: #000000;
+  --primary-color: #32012F;
+}
+
+[data-theme='dark'] {
+  --bg-color: #0C0C0C;
+  --text-color: #ffffff;
+  --primary-color: #F97300;
+}
+
+body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
