--- a/Tugas-React/fp-super-bootcamp-react/src/index.css
+++ b/Tugas-React/fp-super-bootcamp-react/src/index.css
@@ -15,7 +15,7 @@
 }
 
 [data-theme='dark'] {
-  --bg-color: #0C0C0C;
+  --bg-color: #191919;
   --text-color: #ffffff;
   --primary-color: #F97300;
 }
@@ -23,12 +23,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: poppins;
+  font-family: 'Poppins', sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
-}
-
-.container {
-  overflow: hidden;
-  width: 100%;
 }
