--- a/Tugas-React/fp-super-bootcamp-react/src/index.css
+++ b/Tugas-React/fp-super-bootcamp-react/src/index.css
@@ -6,6 +6,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-width: none; 
+  -ms-overflow-style: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 [data-theme='light'] {
@@ -29,6 +35,8 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   border-color: var(--border-color);
+  -webkit-overflow-scrolling: touch;
+  overflow-x: hidden; 
 }
 
 .carousel {
@@ -43,7 +51,7 @@ body {
 
 .carousel-slides img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: fill;
   flex-shrink: 0;
 }
