--- a/tugas-next-js/app/globals.css
+++ b/tugas-next-js/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -14,10 +14,26 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+} */
+
+[data-theme='light'] {
+  --bg-color: #ffffff;
+  --text-color: #000000;
+  --primary-color: #32012F;
+  --border-color: #000000;
+}
+
+[data-theme='dark'] {
+  --bg-color: #191919;
+  --text-color: #000;
+  --primary-color: #F97300;
+  --border-color: #ffffff;
 }
 
 body {
   margin-top: 50px;
+  background-color: var(--bg-color);
+  color: var(--text-color);
   /* color: rgb(var(--foreground-rgb)); */
   /* background: linear-gradient(
       to bottom,
